feat(server): integrate mongodb for data persistence - Add MongoDB connection and collections for balances, transactions, settings, registered users, notification users, and forward URLs. - Store and retrieve data from MongoDB instead of in-memory storage. - Implement IPN verification with PayPal's production endpoint. - Update docker-compose to include MongoDB service.
BREAKING CHANGE: Transactions and settings are now stored in MongoDB, so restarting the server will not clear the data. The in-memory storage has been removed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,13 @@ services:
       - BOT_TOKEN=${BOT_TOKEN}
       - ADMIN_USER_ID=${ADMIN_USER_ID}
       - PORT=3000
+      - MONGO_URI=mongodb://mongo:27017/paypal-ipn
+    depends_on:
+      - mongo
+    restart: unless-stopped
+  
+  mongo:
+    image: mongo:7
+    volumes:
+      - ./mongodata:/data/db
     restart: unless-stopped
