--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.66.0",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "mongodb": "^6.3.0"
   }
 }
